# Axelte-backend

./: .gitignore  Cargo.toml
scraper_service_cli/: Cargo.toml  analysis.txt  result.json
scraper_service_cli/src/: ai.rs  lib.rs  main.rs  scraper.rs  utils.rs
server/: .gitignore  Cargo.toml
server/schema/: schema.sql
server/src/: db.rs  main.rs  state.rs
server/src/handlers/: auth_handlers.rs  body_handlers.rs  jwt.rs  mod.rs  service_handler.rs
server/src/middleware/: auth_middleware.rs
server/src/models/: user.rs
server/src/routes/: auth.rs  body.rs  mod.rs
