[package]
name = "scraper_service_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
url = "2.5"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
backoff = { version = "0.4", features = ["tokio"] }
chrono = { version = "0.4", features = ["serde"] }
