[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper_service_cli = { path = "../scraper_service_cli" }
async-trait = "0.1.88"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["mysql", "macros", "runtime-tokio-rustls"] }
tokio = { version = "1.45.0", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.4", features = ["cors"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
dashmap = "5.5.3"
futures = "0.3"


